--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta
+      http-equiv="Refresh"
+      content="0; url='https://fluentui-emoji.vercel.app/'"
+    />
+
     <link
       rel="icon"
       type="image/x-icon"
@@ -12,262 +17,12 @@
     />
 
     <title>Fluentui Emoji</title>
-
-    <link rel="stylesheet" href="./assets/style/github-dark-dimmed.min.css" />
-
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-      }
-      body {
-        color: #696969;
-        font: 12px/1.5 tahoma, arial, \5b8b\4f53, sans-serif;
-      }
-      a {
-        color: #333;
-        text-decoration: underline;
-      }
-      a:hover {
-        color: rgb(9, 73, 209);
-      }
-      .header {
-        color: #333;
-        text-align: center;
-        padding: 80px 0 60px 0;
-        min-height: 153px;
-        font-size: 14px;
-      }
-      .header .logo svg {
-        height: 120px;
-        width: 120px;
-      }
-      .header h1 {
-        font-size: 42px;
-        padding: 26px 0 10px 0;
-      }
-      .header sup {
-        font-size: 14px;
-        margin: 8px 0 0 8px;
-        position: absolute;
-        color: #7b7b7b;
-      }
-      .info {
-        color: #999;
-        font-weight: normal;
-        max-width: 346px;
-        margin: 0 auto;
-        padding: 20px 0;
-        font-size: 14px;
-      }
-
-      .main {
-        width: 960px;
-        margin: 0 auto;
-      }
-
-      .footer {
-        text-align: center;
-        padding: 10px 0 90px 0;
-      }
-      .footer a {
-        text-align: center;
-        padding: 10px 0 90px 0;
-        color: #696969;
-      }
-      .footer a:hover {
-        color: #0949d1;
-      }
-    </style>
-
-    <style>
-      .github-corner:hover .octo-arm {
-        animation: octocat-wave 560ms ease-in-out;
-      }
-      .github-corner svg {
-        position: fixed;
-        z-index: 999;
-        border: 0px;
-        top: 0px;
-        right: 0px;
-      }
-      @keyframes octocat-wave {
-        0%,
-        100% {
-          transform: rotate(0);
-        }
-        20%,
-        60% {
-          transform: rotate(-25deg);
-        }
-        40%,
-        80% {
-          transform: rotate(10deg);
-        }
-      }
-      @media (max-width: 500px) {
-        .github-corner:hover .octo-arm {
-          animation: none;
-        }
-        .github-corner .octo-arm {
-          animation: octocat-wave 560ms ease-in-out;
-        }
-      }
-    </style>
-
-    <style>
-      .hljs {
-        border-radius: 12px;
-      }
-
-      .hljs-ln td.hljs-ln-numbers {
-        -webkit-touch-callout: none;
-        -webkit-user-select: none;
-        -khtml-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-
-        text-align: center;
-        color: #ccc;
-        border-right: 1px solid #ccc;
-        vertical-align: top;
-        padding-right: 5px;
-      }
-
-      .hljs-ln td.hljs-ln-code {
-        padding-left: 10px;
-      }
-
-      .bookmark {
-        padding-top: 0;
-      }
-    </style>
-
-    <style>
-      .main-title {
-        font-size: 20px;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-
-      .section-title {
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-
-      .section-subtitle {
-        font-size: 14px;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-    </style>
   </head>
   <body>
-    <a
-      href="https://github.com/MKAbuMattar/fluentui-emoji"
-      target="__blank"
-      class="github-corner"
-    >
-      <svg
-        width="62"
-        height="62"
-        viewBox="0 0 250 250"
-        aria-hidden="true"
-        style="fill: #d52128; color: rgb(255, 255, 255)"
-      >
-        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-        <path
-          d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-          fill="currentColor"
-          class="octo-arm"
-          style="transform-origin: 130px 106px"
-        ></path>
-        <path
-          d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-          fill="currentColor"
-          class="octo-body"
-        ></path>
-      </svg>
-    </a>
-    <header class="header">
-      <div class="logo">
-        <a href="./"
-          ><svg
-            role="img"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 300 300"
-            height="150"
-            fill="#d52128"
-          >
-            <title>MKAbuMattar</title>
-            <path
-              d="m1877 2568c-183-227-346-430-362-451-32-40-64-54-88-40-8 4-33 31-54 58-29 37-54 90-93 200-50 140-57 154-111 213-33 34-87 104-120 155-77 116-79 118-69 71 7-29 4-59-11-119-12-44-22-81-23-83-2-1-35 16-73 38-55 31-74 48-88 79-11 26-36 52-71 77-30 20-56 35-58 33s-7-45-12-95c-7-68-6-99 3-120 7-16 12-46 13-66 0-47 98-295 185-468 79-158 163-365 175-434 5-28 17-74 27-103 17-52 17-52-11-123-15-39-44-89-63-112s-41-54-49-69c-20-39-71-114-86-127-7-5-26-12-43-14-26-3-32-10-56-73-15-38-72-144-128-235l-101-165 40-40 40-41-20-160c-11-87-20-164-20-171s13-9 39-6c34 5 40 2 61-27 14-19 25-53 28-81s10-49 16-49c7 0 40 9 74 21 70 23 47-7 197 269 138 253 207 355 329 486 71 77 80 77 114 5 11-23 32-44 57-57 39-20 40-23 62-115 12-52 25-104 28-115 4-20 182-170 191-162 2 2-4 46-12 96-9 51-14 98-11 106 6 15 59 28 81 20 7-3 27-24 44-47 20-28 53-54 97-77 78-41 85-37 85 56 0 64 11 84 45 84 16 0 26-10 37-38 13-34 20-39 76-55 34-9 66-17 71-17s14 30 20 66c13 73 18 61-70 191-26 38-70 114-97 169-63 124-84 153-149 203-42 33-53 48-58 78-3 21-8 47-10 58s-36 69-75 128c-63 98-70 113-70 159 0 47 4 55 48 102 27 28 68 89 93 136 53 103 183 298 293 440 118 152 124 161 219 315 79 126 87 145 87 189v49l-77-75c-49-47-92-80-117-88-37-12-39-11-62 16-27 32-27 31 3 226 13 88 14 110 3 122-7 9-16 16-21 16-4 0-158-186-342-412z"
-              transform="matrix(.1 0 0 -.1 0 300)"
-            />
-          </svg>
-        </a>
-      </div>
-
-      <h1>Fluentui Emoji<sup>0.0.0-beta.0.0.2</sup></h1>
-      <div class="info"></div>
-      <p>
-        <a href="https://github.com/MKAbuMattar/fluentui-emoji">GitHub</a> ·
-
-        <a href="https://github.com/MKAbuMattar/fluentui-emoji/issues"
-          >Feedback</a
-        >
-      </p>
-    </header>
-
-    <main class="main">
-      <p class="main-title">Getting Fluentui Emoji</p>
-      <section>
-        <p class="section-title">Hosted</p>
-        <p class="section-subtitle">jsdelivr</p>
-        <pre><code class="language-xml hljs">&lt;!-- fluentui emoji flat --&gt;
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/MKAbuMattar/fluentui-emoji@latest/styles/flat/css/fluentui-emoji-flat.min.css" /&gt;
-
-&lt;!-- fluentui emoji high contrast --&gt;
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/MKAbuMattar/fluentui-emoji@latest/styles/high-contrast/css/fluentui-emoji-high-contrast.min.css" /&gt;</code></pre>
-
-        <p class="section-subtitle">unpkg</p>
-        <pre><code class="language-xml hljs">&lt;!-- fluentui emoji flat --&gt;
-&lt;link rel="stylesheet" href="https://unpkg.com/fluentui-emoji@latest/styles/flat/css/fluentui-emoji-flat.min.css" /&gt;
-
-&lt;!-- fluentui emoji high contrast --&gt;
-&lt;link rel="stylesheet" href="https://unpkg.com/fluentui-emoji@latest/styles/high-contrast/css/fluentui-emoji-high-contrast.min.css" /&gt;</code></pre>
-
-        <p class="section-title">Install as package</p>
-
-        <pre><code class="language-bash hljs">#npm
-npm install --save fluentui-emoji@latest
-
-#yarn
-yarn add fluentui-emoji@latest
-
-#pnpm
-pnpm add fluentui-emoji@latest</code></pre>
-      </section>
-    </main>
-
-    <div class="footer">
-      Licensed under MIT. (Yes it's free and
-      <a href="https://github.com/MKAbuMattar/fluentui-emoji">open-sourced</a>
-    </div>
-
-    <script src="./assets/js/highlight.min.js"></script>
-    <script src="./assets/js/highlightjs-line-numbers.min.js"></script>
-
     <script>
-      document.addEventListener('DOMContentLoaded', (event) => {
-        hljs.initHighlightingOnLoad();
-        hljs.initLineNumbersOnLoad({
-          singleLine: true,
-        });
-      });
+      (() => {
+        location.replace('https://fluentui-emoji.vercel.app/');
+      })();
     </script>
   </body>
 </html>
